<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="home_hot_app_label">上升最快</string>
    <string name="home_topic_game_label">精品专题</string>
    <string name="home_hot_game_label">热门游戏</string>
    <string name="home_must_app_label">平板必备</string>
    <string name="home_recommed_label">推荐</string>
    <string name="home_rank_label">排行</string>
    <string name="home_classily_label">分类</string>
    <string name="home_game_label">游戏</string>
    <string name="home_my_label">我的</string>
    <string name="home_manager">管理</string>
    <string name="home_wifi">WIFI</string>
    <string name="setting_about_cs">游戏中心</string>
    <string name="setting_office_web"></string>
    <string name="tel_number"></string>
    <string name="setting_show_about">关于 </string>
    <string name="local_game_label">单机游戏</string>
    <string name="local_game_label_sel">单机游戏 精选</string>
    <string name="topic_spec_label">专题详情</string>
    <string name="action_bar_heanline">游戏中心</string>
    <string name="no_data_and_server_error">服务器出错，数据未获取</string>
    <string name="right_up">即将上线，敬请期待</string>
    <string name="must_game_label">必备游戏</string>
    <string name="action_bar_return">返回</string>
    <string name="setting_about_remind">扫一扫，精品应用每日推，更有豪华礼包送</string>
    <string name="do_no_wifi_do_download">   您设置了‘仅在WIFI环境时下载’，在3G网络下无法下载，请连接WIFI或修改设置后重试。</string>
    <string name="do_setting">去设置</string>
    <string name="do_kown">继续</string>
    <string name="do_3g_download">您正使用移动数据网络，继续下载可能会产生流量费用，是否继续？</string>
    <string name="do_yes">继续</string>
    <string name="do_no">取消</string>
    <string name="cs_accounttype">com.hykj.account</string>
    <string name="download_title">安装帐号中心</string>
    <string name="download_msg">您还没有安装帐号中心，是否立即安装</string>
    <string name="download_is_online">正在下载帐号中心，请稍候&#8230;</string>
    <string name="download_checkupdate_noupdate">获取帐号中心失败，请稍后再试</string>
    <string name="title_fmt">管理帐户</string>
    <string name="key1_action">帐户中心</string>
    <string name="key1_summary">管理CS帐户</string>
    <string name="setting_only_wifi_download_detail_text"></string>
    <string name="setting_wifiauto_download">WIFI闲时自动下载游戏</string>
    <string name="setting_wifiauto_download_detail_text"></string>
    <string name="setting_downloaded_tosetup">下载完成后直接启动安装</string>
    <string name="setting_setup_delete_package">安装成功后自动删除安装包</string>
    <string name="setting_boot_download_unfinish_download">启动后自动下载未完成任务</string>
    <string name="setting_downloaded_voice_tips">下载完成后声音提示</string>
    <string name="setting_check_update_text">版本升级</string>
    <string name="setting_auto_update_text">自动升级</string>
    <string name="setting_auto_update_details_text">WiFi网络下，待机时自动升级</string>
    <string name="setting_delete_pkg_details_text">安装完成后自动删除安装包</string>
    <string name="setting_check_update_details_text">
        当前版本
        <xliff:g
            id="name"
            example="01.00">%s</xliff:g>
    </string>
    <string name="web_game_label">网络游戏</string>
    <string name="web_game_label_sel">网络游戏 精选</string>
    <string name="newest_game_label">新品推荐</string>
    <string name="newest_app_label">新品推荐</string>
    <string name="nice_app_label">精品应用</string>
    <string name="nice_game_label">精品游戏</string>
    <string name="topic_game_label">精品专题</string>
    <string name="view_game_label">"查看全部&amp;gt;"</string>
    <string name="game_detail_label">应用详情</string>
    <string name="game_manage_label">管理中心</string>
    <string name="title_section_download">下载管理</string>
    <string name="error_msg_net_fail">当前无网络连接，请检查网络后重试</string>
    <string name="refresh_retry_btn">点击重试</string>
    <string name="tip_last_page">已经到底了</string>
    <string name="install">"安装"</string>
    <string name="installed">"已安装"</string>
    <string name="installing">"正在安装"</string>
    <string name="installing_donwload">"下载完成，等待安装"</string>
    <string name="install_succeed">
        <xliff:g id="name">%s</xliff:g>
        已安装成功
    </string>
    <string name="pause">"暂停"</string>
    <string name="pauseing">"已暂停"</string>
    <string name="download">"下载"</string>
    <string name="downloading">"下载中"</string>
    <string name="reload">"重试"</string>
    <string name="reloading">"安装失败，存储空间不足"</string>
    <string name="delete">"删除"</string>
    <string name="delete_succeed">"已删除任务:"</string>
    <string name="deleted">"无法找到已下载文件，请重试"</string>
    <string name="update_app">"更新"</string>
    <string name="cancel">"取消"</string>
    <string name="detail_download_label"> "下 载 : "</string>
    <string name="detail_size_label"> "大 小 : "</string>
    <string name="detail_developer_label">"开 发 商 : "</string>
    <string name="detail_date_label"> "更新日期 : "</string>
    <string name="detail_version_label"> "版 本 : "</string>
    <string name="waiting">"等待中"</string>
    <string name="download_tip_preparing">"准备下载…"</string>
    <string name="download_tip_waiting">"排队等待中…"</string>
    <string name="download_tip_loading" />
    <string name="download_current_length">
        "已下载：
        <xliff:g
            id="currentLength"
            example="12MB">%s </xliff:g>
        <xliff:g
            id="percent"
            example="20%"> %d%%</xliff:g>
        "
    </string>
    <string name="download_tip_network_error1">"网络出错请"</string>
    <string name="download_tip_network_error2">""</string>
    <string name="download_tip_file_error">"安装包下载出错"</string>
    <string name="download_tip_server_error">"请稍后再试"</string>
    <string name="download_tip_file_noexist">"安装包已下架"</string>
    <string name="download_tip_no_freesapce1">"存储空间不足"</string>
    <string name="download_tip_no_freesapce2">"后重试"</string>
    <string name="download_tip_file_deleted">"无法找到安装包"</string>
    <string name="download_tip_same_id">"请重新升级"</string>
    <string name="detail_app_update_title">升级说明</string>
    <string name="detail_app_info_title">应用介绍</string>
    <string name="detail_show_more">更多</string>
    <string name="detail_hide_more">收起</string>
    <string name="detail_app_pic_title">应用截图</string>
    <string name="detail_app_info">"让我们一起牛B哄哄地玩耍吧"</string>
    <string name="detail_snapshot_loading">正在努力加载&#8230;</string>
    <string name="download_info">"11.21MB"</string>
    <string name="file_not_exist">安装包已不存在</string>
    <string name="error_get_appdetail">获取应用信息失败，请稍后重试</string>
    <string name="current_version_label_unkown">"未知"</string>
    <string name="update_version_label">"版本：" </string>
    <string name="loading">正在努力加载&#8230;</string>
    <string name="searching">正在搜索&#8230;</string>
    <string name="back_label">"返回：" </string>
    <string name="get_detail_fail">"无法获取下载信息，请稍后再试" </string>
    <string name="group_app_count">
        <xliff:g
            id="number"
            example="88">%d</xliff:g>
        款
    </string>
    <string name="topic_app_count">
        应用数量：
        <xliff:g
            id="number"
            example="88">%s</xliff:g>
        款
    </string>
    <string name="topic_tip">
        专题介绍：
        <xliff:g
            id="number"
            example="88">%s</xliff:g>
    </string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="hot_games">附近的人都在下</string>
    <string name="hot_search">全民热搜</string>
    <string name="checkupdate_noupdate">当前版本已是最新版本</string>
    <string name="checkupdate">检查更新</string>
    <string name="update">立即升级</string>
    <string name="update_title">检测到新版本</string>
    <string name="update_later">以后再说</string>
    <string name="update_notify_start">正在下载新版本</string>
    <string name="update_notify_end">新版本下载完成</string>
    <string name="update_notify_end_text">点击安装升级包</string>
    <string name="update_notify_error">升级包下载失败，请稍后再试</string>
    <string name="update_notify_error_text">当前无网络连接，请检查网络并稍候再试</string>
    <string name="download_notify_apps">
        <xliff:g
            id="count"
            example="10">%d</xliff:g>
        款应用正在下载
    </string>
    <string name="download_notify_apps_hint">点击查看下载列表</string>
    <string name="storage_full_msg">存储空间已满，无法安装</string>
    <string name="setting_reponsy_daclare">
        <u>免责声明</u>
    </string>
    <string name="setting_copy_right_daclare"></string>
    <string name="setting_copy_right_own"></string>
    <string name="app_software_detail_app_version_tag">版本: </string>
    <string name="app_software_detail_app_language_tag">语言: </string>
    <string name="app_software_detail_app_size_tag">大小: </string>
    <string name="app_software_detail_app_update_tag">更新: </string>
    <string name="app_software_detail_app_developer_tag">开发商: </string>
    <string name="app_software_detail_app_upgrade_tag">升级介绍</string>
    <string name="app_software_detail_app_business_tag">应用介绍</string>
    <string name="app_software_detail_upgrade_info_show_more">更多</string>
    <string name="app_info_size_flag">
        <xliff:g
            id="count"
            example="10">%d</xliff:g>
        M
    </string>
    <string name="app_info_navigation_software_detail_tab_title">应用详情</string>
    <string name="app_info_navigation_user_evaluate_tab_title">用户评价</string>
    <string name="no_user_evaluate">暂无评论。少年，你要不要评论一下？</string>
    <string name="app_manager_navigation_download_tab_title">下载管理</string>
    <string name="app_manager_bar_right_btn_edit">编辑</string>
    <string name="app_manager_bar_right_btn_upgrade">全部升级</string>
    <string name="app_manager_bar_left_btn_del_num">
        已选中
        <xliff:g
            id="count"
            example="10">%d</xliff:g>
        任务
    </string>
    <string name="app_manager_bar_right_btn_finish">完成</string>
    <string name="immediate_clean">立即清理</string>
    <string name="check_network">检查</string>
    <string name="no_upgrade_details">暂无升级详情</string>
    <string name="have_upgrade_details">请查看升级详情</string>
    <string name="is_in_downloadtask_list">已经在下载队列中&#8230;</string>
    <string name="unable_to_remove_the_task">正在安装，无法删除任务</string>
    <string name="success_to_remove_count_task">
        已成功删除
        <xliff:g
            id="count"
            example="10">%d</xliff:g>
        个下载任务
    </string>
    <string name="please_to_select_task">任务选择</string>
    <string name="app_install">安装</string>
    <string name="app_installed">已安装</string>
    <string name="app_pause">暂停</string>
    <string name="app_redownload">重下</string>
    <string name="app_retry">重试</string>
    <string name="app_wait_to_install">待安装</string>
    <string name="app_waiting">等待中</string>
    <string name="app_installing">正在安装</string>
    <string name="app_download">下载</string>
    <string name="app_upgrade">升级</string>
    <string name="app_downloading">下载中</string>
    <string name="app_fail">失败</string>
    <string name="app_resume">继续</string>
    <string name="app_update">更新</string>
    <string name="app_open">打开</string>
    <string name="app_delete">删除</string>
    <string name="topic_app_fragement_more_button">查看更多</string>
    <string name="app_setting_about_button_text">确定</string>
    <string name="recharge_description_mobile">支持移动、联通、电信充值卡，请选择面额：</string>
    <string name="pay_bill_paying_now">立即充值</string>
    <string name="recharge_pay_card">卡号：</string>
    <string name="recharge_pay_password">密码：</string>
    <string name="recharge_pay_cardhint">请输入充值卡号码</string>
    <string name="recharge_pay_passwordhint">请输入充值卡密码</string>
    <string name="recharge_pay_mobile_desa">温馨提示：</string>
    <string name="recharge_pay_mobile_desb">1.请保证选择的充值卡面额与实际面额一致，否则可能会导致充值失败</string>
    <string name="recharge_pay_mobile_desc">2.一张有效的卡号密码只支持一次性充值，不可多次充值</string>
    <string name="recharge_text_success">充值成功</string>
    <string name="recharge_text_done">预计10分钟内到账。</string>
    <string name="game_gift">游戏大礼包</string>
    <string name="title_idcode">验证码:</string>
    <string name="press_copy">*长按复制</string>
    <string name="title_step1_attition">1.微信搜索关注“花生游戏中心”</string>
    <string name="title_step2_attition">2.公众号回复验证码，换取礼包序列号</string>
</resources>