<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="23dp"
        android:text="@string/setting_about_cs"
        android:textColor="#6A604C"
        android:textSize="@dimen/csl_text_size_xlarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/fragment_setting_about_space"
            android:text="@string/setting_about_version"
            android:textColor="@color/csl_cs_sf_gray_low"
            android:textSize="@dimen/csl_text_size_large" />

        <TextView
            android:id="@+id/office_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/setting_office_web"
            android:textColor="@color/csl_cs_sf_gray_low"
            android:textSize="@dimen/csl_text_size_large" />
    </LinearLayout>

     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_gravity="center_horizontal">
         
         <TextView
            android:id="@+id/setting_right_own"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_copy_right_own"
            android:textColor="@color/csl_cs_sf_gray_low"
            android:layout_alignParentBottom="true"
			android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/csl_text_size_small" />
         
          <TextView
            android:id="@+id/setting_right_daclare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/setting_right_own"
            android:text="@string/setting_copy_right_daclare"
            android:textColor="@color/csl_cs_sf_gray_low"
            android:gravity="center_horizontal"
            android:textSize="@dimen/csl_text_size_small" />
         
           <TextView
            android:id="@+id/setting_reponse_daclare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/setting_right_daclare"
            android:layout_marginBottom="10dp"
            android:text="@string/setting_reponsy_daclare"
            android:textColor="@color/csl_cs_sf_gray_low"
            android:gravity="center_horizontal"
            android:textSize="@dimen/csl_text_size_small" />
          
     </RelativeLayout>
    
</LinearLayout>