<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recharge_finish_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="47dp"
        android:src="@drawable/recharge_finish_icon" />

    <Button
        android:id="@+id/recharge_finish"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView_finish"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/app_setting_about_button_text"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/imageView_finish"
        android:text="@string/recharge_text_success"
        android:textColor="@color/action_blue_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_success"
        android:layout_below="@+id/text_success"
        android:layout_marginTop="12dp"
        android:singleLine="true"
        android:text="@string/recharge_text_finish"
        android:textColor="#222222"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_success"
        android:layout_below="@+id/text_price"
        android:layout_marginTop="6dp"
        android:text="@string/recharge_text_done"
        android:textColor="#222222"
        android:textSize="12sp" />

</RelativeLayout>